[tool.poetry]
name = "minestart"
version = "0.1.0"
description = "start crypto miner when not gaming and not peak hours"
authors = ["TrentN <Tavn1992@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
GPUtil = "^1.4.0"
psutil = "^5.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
